feat: :sparkles: implement Rate Limiting

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,6 +12,8 @@ JWT_EXPIRES_IN=24h
 # Application Configuration
 PORT=3000
 NODE_ENV=development
+THROTTLE_TTL=60000
+THROTTLE_LIMIT=10
 
 # Redis Configuration (optional)
 REDIS_HOST=localhost
